<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/marvel_banner"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/operationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/addition"
            app:layout_constraintEnd_toStartOf="@+id/btnLess"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operationText" />

    <Button
            android:id="@+id/btnLess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction"
            app:layout_constraintEnd_toStartOf="@+id/btnMult"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnAdd"
            app:layout_constraintTop_toTopOf="@+id/btnAdd" />

    <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/multiplication"
            app:layout_constraintEnd_toStartOf="@+id/btnDiv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnLess"
            app:layout_constraintTop_toTopOf="@+id/btnLess" />

    <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMult"
            app:layout_constraintTop_toTopOf="@+id/btnMult" />

    <Button
            android:id="@+id/btnParenthesisOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parenthesis_open"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_7"
            app:layout_constraintEnd_toStartOf="@+id/btnNumber_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
            android:id="@+id/btnNumber_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_0"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_8"
            app:layout_constraintEnd_toStartOf="@+id/btnParenthesisClose"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnParenthesisOpen"
            app:layout_constraintTop_toBottomOf="@+id/btnLess" />

    <Button
            android:id="@+id/btnParenthesisClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parenthesis_close"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNumber_0"
            app:layout_constraintTop_toBottomOf="@+id/btnMult" />

    <Button
            android:id="@+id/btnNumber_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_7"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_4"
            app:layout_constraintEnd_toStartOf="@+id/btnNumber_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesisOpen" />

    <Button
            android:id="@+id/btnNumber_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_8"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_5"
            app:layout_constraintEnd_toStartOf="@+id/btnNumber_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNumber_7"
            app:layout_constraintTop_toBottomOf="@+id/btnNumber_0" />

    <Button
            android:id="@+id/btnNumber_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_9"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNumber_8"
            app:layout_constraintTop_toBottomOf="@+id/btnParenthesisClose" />

    <Button
            android:id="@+id/btnNumber_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_4"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_1"
            app:layout_constraintEnd_toStartOf="@+id/btnNumber_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNumber_7" />

    <Button
            android:id="@+id/btnNumber_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_5"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_2"
            app:layout_constraintEnd_toStartOf="@+id/btnNumber_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNumber_4"
            app:layout_constraintTop_toBottomOf="@+id/btnNumber_8" />

    <Button
            android:id="@+id/btnNumber_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_6"
            app:layout_constraintBottom_toTopOf="@+id/btnNumber_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNumber_5"
            app:layout_constraintTop_toBottomOf="@+id/btnNumber_9" />

    <Button
            android:id="@+id/btnNumber_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/number_1"
            app:layout_constraintBottom_toTopOf="@+id/btnResponse"
            app:layout_constraintEnd_toStartOf="@+id/btnNumber_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNumber_4" />

    <Button
            android:id="@+id/btnNumber_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/number_2"
            app:layout_constraintBottom_toTopOf="@+id/btnResponse"
            app:layout_constraintEnd_toStartOf="@+id/btnNumber_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNumber_1"
            app:layout_constraintTop_toBottomOf="@+id/btnNumber_5" />

    <Button
            android:id="@+id/btnNumber_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/number_3"
            app:layout_constraintBottom_toTopOf="@+id/btnResponse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNumber_2"
            app:layout_constraintTop_toBottomOf="@+id/btnNumber_6" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

    <Button
            android:id="@+id/btnResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/response"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>