<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".itemDetailActivity">
    <TextView
            android:text="@string/txtTitleCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1">
            <Button
                    android:text="@string/txtTitleCharacters"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnDetChars"
                    android:layout_weight="1"/>
            <Button
                    android:text="@string/txtTitleCreators"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnDetCreators"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1">
            <Button
                    android:text="@string/txtTitleComics"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnDetComics"/>

            <Button
                    android:text="@string/txtTitleEvents"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnDetEvents"/>

        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1">
            <Button
                    android:text="@string/txtTitleSeries"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnDetSeries"
                    android:layout_weight="1"/>
            <Button
                    android:text="@string/txtTitleStories"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnDetStories"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.45"/>
    <ImageView
            android:layout_width="0dp"
            android:src="@drawable/marvel_banner"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>